@@ -89,6 +89,7 @@ commit history.
           function or the Jacobian of the constraint functions. If this
           is not desired, then option fixed_variable_treatment can be set
           to the new value make_parameter_nodual.
+        - Added TNLPAdapter::ResortBounds() and deprecated TNLPAdapter::ResortBnds().
 
 2021-0x-yy: 3.13.5
         - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
